crud-app/overlay/dev/crud-app-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app
spec:
  replicas: 3
