crud-app/overlay/dev/crud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: crud-ingress  
spec:
  rules:
  - host: "crud-dev.apps.dmi3lab.ru"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crud-app
            port:
              number: 8080
